<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.detail.DetailBookActivity">

  <ScrollView
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      tools:layout_editor_absoluteX="0dp"
      tools:layout_editor_absoluteY="0dp">

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical">

    <ImageView
        android:id="@+id/iv_detail_photo"
        android:layout_width="278dp"
        android:layout_height="313dp"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        tools:layout_editor_absoluteX="179dp"
        tools:layout_editor_absoluteY="46dp"
        tools:src="@tools:sample/avatars" />

    <TextView
      android:id="@+id/tv_detail_title"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="center"
      android:layout_marginTop="16dp"
      android:text="@string/books_title"
      android:textSize="24sp"
      android:textAlignment="center"
      android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_detail_book_author"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginLeft="12dp"
        android:text="@string/book_author" />

    <RatingBar
        android:id="@+id/ratingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        style="?android:attr/ratingBarStyle"
        android:numStars="5"
        android:stepSize="0.5"
        android:rating="0.0"
        android:scaleX="0.75"
        android:scaleY="0.75"
        android:progressTint="#FFC107"/>

    <Button
        android:id="@+id/btn_add_bookmark"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginLeft="12dp"
        android:layout_gravity="center"
        android:textColor="@color/green"
        android:background="@drawable/button_border"
        android:text="@string/add_bookmark" />

    <TextView
      android:id="@+id/tv_detail_description"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="center"
      android:layout_marginTop="12dp"
      android:layout_marginBottom="12dp"
      android:layout_marginRight="24dp"
      android:layout_marginLeft="24dp"
      android:text="@string/book_description" />



  </LinearLayout>

  </ScrollView>


  <com.google.android.material.bottomnavigation.BottomNavigationView
      android:id="@+id/bottomNavigationView"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_gravity="bottom"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.0"
      app:layout_constraintStart_toStartOf="parent"
      app:menu="@menu/bottom_nav_menu" />

  </androidx.constraintlayout.widget.ConstraintLayout>